[package]
name = "tishlang_floem"
version = "0.1.0"
edition = "2021"
description = "Floem native window + tishlang_ui Host for Tish JSX (lives outside the tish repo; no Floem in tish itself)"
license = "MIT"
repository = "https://github.com/tishlang/tish-floem"

[dependencies]
floem = { git = "https://github.com/lapce/floem", branch = "main" }
lapce-xi-rope = "0.4.0"
# Same fork/rev as Floem (for `winit::window::Theme` in theme listeners).
winit = { git = "https://github.com/lapce/winit", rev = "133268de675a4fda70816d78a7a1435eb972fea1", package = "floem-winit" }
# Sibling checkout: `tish` and `tish-floem` next to each other (adjust paths if your layout differs).
tishlang_core = { path = "../tish/crates/tish_core" }
tishlang_ui = { path = "../tish/crates/tish_ui", default-features = false, features = ["runtime"] }
